Update to Java 5 apis.